fixed missing file

--- a/alan_dale_completed_workbook.ipynb
+++ b/alan_dale_completed_workbook.ipynb
@@ -297,7 +297,7 @@
     "- Clearly ***comment your code*** to highlight the insertions you have made\n",
     "- Note: if you don't see the GUI immediately look for the icon Jupyter icon in your task bar (also higlighted below)\n",
     "\n",
-    "![mvc_task.png](attachment:mvc_task.png) "
+    "![mvc_task.png](mvc_task.png) "
    ]
   },
   {
