add github link

--- a/alan_dale_completed_workbook.ipynb
+++ b/alan_dale_completed_workbook.ipynb
@@ -2212,6 +2212,14 @@
     "- Gamma, E., Helm, R., Johnson, R., & Vlissides, J. (1995). Gamma, E., Helm, R., Johnson, R., & Vlissides, J. Mar. 1995. Design Patterns–Elements of Reusable Object-Oriented Software. Addison-Wesley.\n",
     "- Alexander Shvets (2018) Dive Into Design Patterns. Refactoring Guru ... and supporting website https://refactoring.guru/design-patterns"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Source Code\n",
+    "The completed workbook can be access via [github](https://github.com/dale976/CO664WBL_DESIGN_PATTERNS)"
+   ]
   }
  ],
  "metadata": {
